# jacob-thompson.github.io

./: .gitignore  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  README.md  _config.yml  package.json  talkmap.py
.github/ISSUE_TEMPLATE/: bug_report.md
_data/: authors.yml  navigation.yml
_data/comments/layout-comments/: comment-1470944006665.yml  comment-1470944162041.yml
_data/comments/markup-syntax-highlighting/: comment-1470969665387.yml
_data/comments/welcome-to-jekyll/: comment-1470942205700.yml  comment-1470942247755.yml  comment-1470942265819.yml  comment-1470942493518.yml
_includes/: author-profile.html  footer.html
_includes/head/: custom.html
_layouts/: default.html
_pages/: 404.html  about.html  about.md  collection-archive.html  cv.html  cv.md  markdown.md  non-menu-page.html  portfolio.html  sitemap.html  sitemap.md  terms.md
_portfolio/: chip8.md  compilerun.md  mazeGenerator.md  pathfinder.md  pong-arcade.md  teal8.md  xcalculator.md
_posts/: 2024-12-27-welcome.html  2024-12-27-welcome.md  2025-01-02-pong.html  2025-10-15-teal8.html  2025-10-16-teal8.html  2199-01-01-future-post.md
_sass/layout/: _forms.scss
_sass/theme/: _air_dark.scss  _air_light.scss  _default_dark.scss  _default_light.scss
assets/css/: buttons.css
assets/js/: _main.js  main.min.js  mazeGenerator.js
files/: pyproject.toml
markdown_generator/: publications.py  pubsFromBib.py  talks.py
talkmap/: map.html
talkmap/leaflet_dist/: MarkerCluster.Default.css  MarkerCluster.css  leaflet.markercluster-src.js  leaflet.markercluster.js  screen.css
